# canon-context-accelerator

./: .env.example  .gitignore  CODEOWNERS  Dockerfile  Dockerfile.bot  Dockerfile.fabric-proxy  README.md  deploy.ps1  eval-config.yaml  pyproject.toml  scan-config.yaml
.canon-cache/: .gitignore
.canon-cache/retail/: profiles.json  schema.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  drift-dimension-values.yml  drift-missing-source.yml  drift-orphaned-definition.yml  drift-undocumented-measure.yml
.github/workflows/: bootstrap.yml  build-index.yml  deploy.yml  eval.yml  interview-intake.yml  review.yml  scan.yml  setup.yml  sync-genie.yml  test.yml
bootstrap-docs/retail/: README.md
bot/: app.py  canon_bot.py  git_ops.py
bot/handlers/: ad_hoc_update.py  drift_review.py  interview.py
canon/: config.py
connectors/: base.py  databricks.py  fabric_semantic.py  fabric_sql.py  snowflake.py
domains/: _index.json
evals/: run_evals.py
schemas/: glossary.schema.json  metrics.schema.json  ontology.schema.json  questions.schema.json  scan-config.schema.json  sensitivity.schema.json
scripts/: build_index.py  canon_init.py  cli.py  export_osi.py  git_ops.py  interview.py  interview_from_issue.py  review_consistency.py  scan.py
serving/: auth.py  repo_client.py
shared/: conventions.md
teams-app/: manifest.json
tests/: conftest.py  test_auth.py  test_connectors.py  test_fabric_proxy.py  test_integration_flow.py  test_mcp_server.py  test_repo_client.py  test_scan.py  test_sql_gate.py  test_validator.py
(+34 files in other folders)
