[project]
name = "canon"
version = "1.0.0"
description = "Canon — Define your business context once. Keep it honest. Serve it everywhere."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jon Vöge", email = "jon@inspari.dk" }
]

dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "azure-identity>=1.15",
    "requests>=2.31",
    "mcp>=1.0",
    "click>=8.1",
    "pyodbc>=5.1",
    "aiohttp>=3.9",
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
bootstrap = [
    "pymupdf>=1.24",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "anthropic>=0.25",  # optional — enables LLM enrichment during bootstrap
]
teams-bot = [
    # Install these only when running the optional Teams bot (optional/teams-bot/).
    "anthropic>=0.25",
    "botbuilder-core>=4.15",
    "botbuilder-integration-aiohttp>=4.15",
    "gitpython>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[project.scripts]
canon = "scripts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["canon", "connectors", "serving", "scripts", "evals"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
